apps/changedetection/proxy/ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-ingress
spec:
  ingressClassName: cloudflare
  rules:
    - host: change.krupa.net.pl
      http:
        paths:
          - backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
            path: /
            pathType: Prefix
